# Contract-review

./: .gitignore  CLAUDE.md  README.md
backend/: data.db  database.py  generate_rules.py  main.py  middleware.py  models.py  pyproject.toml  requirements.txt  test_all_templates.py  test_regex_extraction.py  test_review_accuracy.py  utils.py
backend/routers/: documents.py  integration.py  integration_templates.py  review.py  templates.py
backend/services/: diff_engine.py  parser.py  review_service.py  validator.py
backend/tests/: test_all_templates.py  test_integration_api.py  test_regex_extraction.py  test_review_accuracy.py
backend/uploads/: 0209e347dbf541eb9bc56613d68ee3b6_汽车服务标准合同-调整版V4.docx  375c099d93ad4fe9a92fe4a4849c0457_test_upload.docx  771a11685ee74b2c8a64e6ffa9dbb3d2_咨询服务标准合同.docx  87770f0764f244bbab92de67453d0261_保险第三方管理服务标准合同.docx  c72db00a574f45b6ba602899409eacc0_外包服务标准合同-调整版V4.docx  doc_00d4c91e7adf4beb9830a719e83645c0_技术服务标准合同-测试.docx  doc_10881fd151a1457d8ed0db0e556299c0_咨询服务标准合同-测试.docx  doc_27d0473c16734909a278cad0952a9078_咨询服务标准合同-测试.docx  doc_2b919ec205b5486aa5ad0c85d0b730ad_咨询服务标准合同-测试.docx  doc_484cef60e5064c549355ad2b34eeb727_技术服务标准合同-测试.docx  doc_59d53a3a68a34c2cbaef8bcc535399e9_咨询服务标准合同-测试.docx  doc_5c361af3c0f1485b833ec7698e2bfc8c_租车服务标准合同-测试.docx  doc_5e606cdcab7b4d6bab5829c778e3e406_咨询服务标准合同-测试.docx  doc_644b6fac803e4bb8bbf0291bca535c60_咨询服务标准合同-测试.docx  doc_80fe13b3e337417d9a3b993ba9bf449c_×ÉÑ¯·þÎñ±ê×¼ºÏÍ¬-µ÷Õû°åV4-²âÊÔ.docx  doc_a3cda57f3625461c8638dc7f999d80de_租车服务标准合同-测试.docx  doc_a8b1c2d4c12444779cc3495781c37e89_技术服务标准合同-测试.docx  (+11 more)
(+64 files in other folders)
