[project]
name = "contract-review"
version = "0.1.0"
description = "合同智能审查系统 - Contract Intelligent Review System"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.19",
    "python-docx>=1.1",
]

[project.scripts]
dev = "uvicorn main:app --host 127.0.0.1 --port 8000 --reload"


